# RNJsBridgeWithJSCSourceCompile

./: README.md  build.gradle  perfetto.sh  settings.gradle  trace_file.perfetto-trace
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
buildSrc/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
js-bridge-lib/: build.gradle
js-bridge-lib/src/main/assets/: js-bridge-bundle.js
js-bridge-lib/src/main/cpp/: CMakeLists.txt
js-bridge-lib/src/main/cpp/bridge/: CMakeLists.txt  Instance.cpp  JSExecutor.cpp  JSLogging.cpp  JsBridgeInstanceImpl.cpp  NativeToJsBridge.cpp
js-bridge-lib/src/main/cpp/double_conversion/: CMakeLists.txt
js-bridge-lib/src/main/cpp/fbgloginit/: CMakeLists.txt
js-bridge-lib/src/main/cpp/fbjni/: Application.h  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Context.h  File.h  JThread.h  ReadableByteChannel.cpp  ReadableByteChannel.h  fbjni.cpp  fbjni.h
js-bridge-lib/src/main/cpp/folly/: CMakeLists.txt
js-bridge-lib/src/main/cpp/folly/folly/: Conv.h  Format.cpp  String.cpp
js-bridge-lib/src/main/cpp/glog/glog/: CMakeLists.txt
js-bridge-lib/src/main/cpp/glog/glog/glog/src/: symbolize.cc
js-bridge-lib/src/main/cpp/icu/: CMakeLists.txt
js-bridge-lib/src/main/cpp/jsc/: CMakeLists.txt
js-bridge-lib/src/main/cpp/jsc/webkit/: CMakeLists.txt  ReadMe.md
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/: CMakeLists.txt  CMakeLists.txt.orig  config.h
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/API/: JSBase.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/assembler/: ARM64Assembler.h  PerfLog.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/heap/: Heap.cpp  Heap.h
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/interpreter/: Interpreter.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/llint/: LLIntThunks.cpp  LowLevelInterpreter.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/JavaScriptCore/runtime/: Completion.cpp  ConcurrentJSLock.h  IntlDateTimeFormat.cpp  LiteralParser.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/WTF/: ChangeLog
js-bridge-lib/src/main/cpp/jsc/webkit/Source/WTF/wtf/: CMakeLists.txt  Platform.h  StackTrace.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/WTF/wtf/dtoa/: double-conversion.h  utils.h
js-bridge-lib/src/main/cpp/jsc/webkit/Source/WTF/wtf/unicode/: CollatorDefault.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/WTF/wtf/unix/: LanguageUnix.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/Source/WebKitLegacy/WebKitLegacy.vcxproj/: WebKitLegacy.proj
js-bridge-lib/src/main/cpp/jsc/webkit/Source/cmake/: OptionsCommon.cmake  OptionsJSCOnly.cmake
js-bridge-lib/src/main/cpp/jsc/webkit/Tools/MiniBrowser/win/: MiniBrowserLib.rc
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build-webkit-options.txt  build.ninja  cmake_install.cmake  cmakeconfig.h  compile_commands.json
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/DerivedSources/JavaScriptCore/: BytecodeCacheVersion.h
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/DerivedSources/JavaScriptCore/unified-sources/: UnifiedSource-15db4ad9-2.cpp  UnifiedSource-15db4ad9-3.cpp  UnifiedSource-15db4ad9-4.cpp  UnifiedSource-15db4ad9-5.cpp  UnifiedSource-15db4ad9-6.cpp  UnifiedSource-15db4ad9-7.cpp  UnifiedSource-15db4ad9-8.cpp  UnifiedSource-15db4ad9-9.cpp  UnifiedSource-23a5fd0e-10.cpp  UnifiedSource-23a5fd0e-11.cpp  UnifiedSource-23a5fd0e-12.cpp  UnifiedSource-23a5fd0e-13.cpp  UnifiedSource-23a5fd0e-14.cpp  UnifiedSource-23a5fd0e-15.cpp  UnifiedSource-23a5fd0e-16.cpp  UnifiedSource-23a5fd0e-4.cpp  UnifiedSource-23a5fd0e-5.cpp  UnifiedSource-23a5fd0e-6.cpp  UnifiedSource-23a5fd0e-8.cpp  UnifiedSource-23a5fd0e-9.cpp  UnifiedSource-84c9f43f-6.cpp  UnifiedSource-bfc896e1-10.cpp  UnifiedSource-bfc896e1-11.cpp  UnifiedSource-bfc896e1-12.cpp  UnifiedSource-d93d10ff-3.cpp
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/Source/: cmake_install.cmake
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/Source/JavaScriptCore/: cmake_install.cmake
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/Source/WTF/: cmake_install.cmake
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/Source/WTF/wtf/: cmake_install.cmake
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/Source/bmalloc/: cmake_install.cmake
js-bridge-lib/src/main/cpp/jsc/webkit/WebKitBuild/Release/Tools/: cmake_install.cmake
js-bridge-lib/src/main/cpp/jscexecutor/: CMakeLists.txt
js-bridge-lib/src/main/cpp/jscexecutor/jsi/jsi/: JSCRuntime.cpp
js-bridge-lib/src/main/cpp/jscexecutor/jsi/jsiexecutor/: JSIExecutor.cpp
js-bridge-lib/src/main/cpp/lyra/: cxa_throw.cpp  lyra.cpp  lyra_breakpad.cpp  lyra_exceptions.cpp  lyra_exceptions.h
js-bridge-lib/src/main/cpp/trace/: CMakeLists.txt  TraceSection.cpp  TraceSection.h
(+8 files in other folders)
